# jobbot

./: .env.example  .gitignore  BOT_BUILD_STATUS.md  FINAL_JOB_BOT_PRD.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260416_000001_initial_foundation.py  20260418_000002_auto_apply_queue.py  20260418_000003_auto_apply_queue_runner_leases.py  20260418_000004_auto_apply_queue_runner_lease_owner.py
docs/: DEV_LOG.md  LIVE_TEST_OPERATOR_RUNBOOK.md  PRODUCTION_OPERATIONS.md  PRODUCTION_READINESS_CHECKLIST.md  STATUS_REPORT_2026_04_17.md
docs/release-validation/: README.md  (+1 more)
scripts/: verify-release.ps1
tests/: test_api_auto_apply.py  test_api_jobs.py  test_api_model_calls.py  test_browser_service.py  test_cli_browser.py  test_cli_execution_history.py  test_discovery_inbox.py  test_discovery_ingestion.py  test_discovery_location_aliases.py  test_discovery_normalization.py  test_eligibility_service.py  test_enrichment_service.py  test_execution_linkedin_assist.py  test_execution_linkedin_questions.py  test_execution_service.py  test_execution_site_handlers.py  test_execution_site_profiles.py  test_execution_site_profiles_fixtures.py  test_execution_vendor_flows.py  test_execution_vendor_registry.py  test_google_adapter.py  test_greenhouse_adapter.py  test_lever_adapter.py  test_meta_adapter.py  test_microsoft_adapter.py  test_model_calls_prompts.py  test_model_calls_service.py  test_preparation_llm_writer.py  test_preparation_service.py  test_profile_service.py  test_review_service.py  test_scoring_service.py  test_workday_adapter.py
(+86 files in other folders)
