[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobbot"
version = "0.1.0"
description = "Local-first job application automation platform."
readme = "BOT_BUILD_STATUS.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
    "ruff>=0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest_tmp/run"
testpaths = ["tests"]
norecursedirs = [
    ".venv",
    "ApplyPilot",
    "Auto_job_applier_linkedIn",
    "EasyApplyJobsBot",
    "Job-apply-AI-agent",
    "careers",
    "graphify-out",
    "pytest-cache-files-*",
]
